# carapace

./: .woodpecker.yml  AGENTS.md  Dockerfile  LICENSE  README.md  fix_tests.py  patch.diff  pyproject.toml  refactor.py
carapace/: __init__.py  bootstrap_phase_issue.py  cli.py  composition_report.py  cycle_time.py  cycle_time_report.py  dag.py  gt.py  hateoas.py  issue_ref.py  justification_backfill.py  pr_issue_ref.py  queue.py  reviewer_metrics.py  scheduler.py  task_timeline.py
carapace/cli/: bws.py  ci_metrics.py  composition_report.py  cycle_time.py  cycle_time_report.py  fleet.py  gatus.py  gatus.py.rej  gt.py  justification_backfill.py  main.py  pipeline_metrics.py  pr_issue_ref.py  redis_manager.py  task_timeline.py  trigger.py
carapace/core/: queue.py  queue_contract.py  scheduler.py
carapace/validator/: __init__.py  cli.py  config.py  validation.py  validator.yaml  validator.yaml.example  viz.py
carapace/worker/: base.py  container.py  host.py  pool.py
docs/plans/: 2026-03-09-queue-daemon-design.md  2026-03-09-queue-daemon.md  2026-03-27-gt-pr-labels-plan.md  2026-03-27-gt-project-remove-design.md  2026-03-27-gt-project-remove-plan.md
examples/: agent-bootstrap.md  agent-bootstrap.sh  agent-bootstrap.validate.sh
tests/: test_apikey_pool.py  test_bootstrap_phase_issue.py  test_bws.py  test_ci_metrics.py  test_composition_report.py  test_cycle_time_helper.py  test_cycle_time_report.py  test_gatus.py  test_gt.py  test_issue_ref.py  test_justification_backfill.py  test_pipeline_metrics.py  test_pr_issue_ref.py  test_queue.py  test_queue_contract.py  test_redis_manager.py  test_reviewer_metrics.py  test_scheduler.py  test_task_timeline.py  test_trigger_queue_contract.py  test_validator.py  test_viz.py  test_worker_container.py
workspace/logs/examples/: agent-task-events.sample.jsonl
workspace/schemas/: agent-task-timeline.schema.json
