[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carapace"
version = "0.2.0"
description = "Carapace agent-first CLI toolkit with YAML HATEOAS output"
requires-python = ">=3.9"
dependencies = [
    "networkx>=3.2.1",
    "PyYAML>=6.0.2",
    "jsonschema>=4.22.0",
    "redis>=5.0.0",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
]

[project.scripts]
carapace = "carapace.cli.main:main"
carapace-cycle-time = "carapace.cli.cycle_time:main"
phase-validator = "carapace.validator.cli:main"
phase-issue-bootstrap = "carapace.cli.bootstrap_phase_issue:main"
reviewer-metrics = "carapace.cli.reviewer_metrics:main"
ci-metrics = "carapace.cli.ci_metrics:main"
task-timeline-metrics = "carapace.cli.task_timeline:main"
pipeline-metrics = "carapace.cli.pipeline_metrics:main"
gt = "carapace.cli.gt:main"
carapace-bws = "carapace.cli.bws:main"
carapace-redis-manager = "carapace.cli.redis_manager:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["carapace*"]

[tool.setuptools.package-data]
"carapace.validator" = ["validator.yaml", "validator.yaml.example"]
